# tee-worker

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  app.yaml  go.mod  go.sum  gqlgen.yml  rust-toolchain.toml  server.go  server_back.go
cmd/: main.go
dao/: log.go  mod.go  mod_test.go  runing.go  secret.go  secret_test.go  user.go  user_test.go  worker.go  worker_test.go
db/: mod.go  user.go  worker.go
deploy/: Dockerfile  build.sh
doc/: dkg.md  libos.md
docs/: build.md  docs.md
graph/: addon.graphqls  addon.resolvers.go  auth.go  auth_test.go  directives.go  generated.go  mod.go  proof.graphqls  proof.resolvers.go  schema.graphqls  schema.resolvers.go  user.graphqls  user.resolvers.go  worker.graphqls  worker.resolvers.go
hack/: build.sh  chain.yaml  chain_gen.sh  chain_nodeport.yaml  dapp.yaml  deploy.sh  dev.sh  gen.sh  install.sh  k8s_deploy.sh  manager_headless.yaml  manager_nodeport.yaml  pre_install.sh  run_in_docker.sh  sgx_device.sh
hacks/: docker_builder.sh  k8s_deploy.sh
mesh-proxy/: README.md  proxy.go
mint/: app.go  contract.go  event.go  gpu.go  hash.go  hash_test.go  keypair.go  keypair_test.go  libos_wrap.go  loading.go  loading_test.go  mint.go  namespace.go  namespace_test.go  node.go  p2p-cluster-proof.go  p2p-handler.go  p2p-reencrypt.go  p2p.go  pod.go  pod_test.go  storage.go  task.go  tee.go  tee_trigger.go  tee_wrap.go  verify.go  worker_node.go
peer/: connect.go  p2p.go  pubsub.go  rule.go
src/: main.rs
store/: dcap.go  log.go  runing.go  secret.go  secret_test.go  user.go  (+1 more)
(+200 files in other folders)
